# package-preprocessing

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
flow_preprocessor/exceptions/: exceptions.py
flow_preprocessor/preprocessing_logic/: fetch_images.py  models.py  parse_textlines.py  preprocess.py  process_images.py  status.py
flow_preprocessor/utils/: delete_repo.py
flow_preprocessor/utils/logging/: logger.py  logging_config.yaml  preprocessing_logger.py
preprocessor/preprocessing_logic/: fetch_images.py  parse_textlines.py  preprocess.py  process_images.py  status.py
src/flow_preprocessing/: __init__.py
src/flow_preprocessing/preprocessing_logic/: config.py  converter_factory.py  preprocess.py
src/flow_preprocessing/utils/logging/: preprocessing_logger.py
src/flow_preprocessor/: __init__.py
src/flow_preprocessor/preprocessing_logic/: config.py  converter_factory.py  preprocess.py
src/flow_preprocessor/utils/: url_validator.py
src/flow_preprocessor/utils/logging/: preprocessing_logger.py
tests/: conftest.py
tests/test_data/: 1_0054.xml  gt.txt  trainer_state.json
tests/test_data/img_def/: 1193881_48466109_1.10.tif  1193881_48466109_1.2.tif  1193881_48466109_1.3.tif  1193881_48466109_1.4.tif  1193881_48466109_1.5.tif  1193881_48466109_1.6.tif  1193881_48466109_1.7.tif  1193881_48466109_1.8.tif  1193881_48466109_1.9.tif
tests/unit_tests/: fetch_images_test.py  parse_textlines_test.py  preprocess_test.py  process_images_test.py  status_test.py  test_config.py  test_converter_factory.py  test_preprocess.py
tests/unit_tests/tmp/preprocessed/test_process/: gt.txt
tests/unit_tests/tmp/test_process/: 1155140_0001_47389007.xml  1520131_0003_58329924.xml
