[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "flow_preprocessing"
version = "0.5.0"
description = "Preprocessing Package for the Flow Project (flow-project.net)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" },
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "flow-segmenter",
    "pagexml-hf",
    "htrflow>=0.2.5",
    "lxml>=5.4.0",
    "motor~=3.5.1",
    "numpy",
    "pillow>=11.2.1",
    "pydantic~=2.11.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=78.1.1",
]
keywords = [
    "flow-project",
    "preprocessing",
    "htrflow",
    "digital-humanities",
    "htr",
    "handwritten-text-recognition",
    "datasets",
    "huggingface",
    "nlp",
    "machine-learning",
]

[project.optional-dependencies]
dev = [
    "line-profiler>=4.2.0",
    "memory-profiler>=0.61.0",
    "ruff",
]

[project.urls]
Homepage = "https://flow-project.net"
Repository = "https://github.com/The-Flow-Project/package-preprocessing"

[tool.uv.sources]
flow-segmenter = { git = "https://github.com/The-Flow-Project/package-segmenter", rev = "main" }
pagexml-hf = { git = "https://github.com/The-Flow-Project/pagexml-hf", rev = "main" }
