[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_preprocessing"
dynamic = ["version"]
description = "Preprocessing Package for the Flow Project (flow-project.net)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" },
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "flow-segmenter",
    "pagexml-hf",
    "lxml>=4.6.0",
    "numpy",
    "pillow>=12.1.1",
    "pydantic",
    "pyyaml",
    "requests>=2.0.0",
    "setuptools",
]
keywords = [
    "flow-project",
    "preprocessing",
    "htrflow",
    "digital-humanities",
    "htr",
    "handwritten-text-recognition",
    "datasets",
    "huggingface",
    "nlp",
    "machine-learning",
]

[dependency-groups]
dev = [
    "line-profiler>=4.2.0",
    "memory-profiler>=0.61.0",
    "ruff",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "sphinx>=7.4.3",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-rtd-theme>=1.2.2",
    "mypy>=1.3.0",
    "black>=25.12.0",
    "pytest-asyncio>=1.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.4",
]

[project.urls]
Homepage = "https://flow-project.net"
Repository = "https://github.com/The-Flow-Project/package-preprocessing"

[tool.uv.sources]
flow-segmenter = { git = "https://github.com/The-Flow-Project/package-segmenter" }
pagexml-hf = { git = "https://github.com/The-Flow-Project/pagexml-hf" }

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.setuptools.packages.find]
where = ["src"]
# packages = ["flow_preprocessing"]

[tool.setuptools.dynamic]
version = { attr = "flow_preprocessing.__version__" }
